<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    >

        <LinearLayout
            android:id="@+id/Layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            >

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/small_logo"
                android:layout_marginTop="50dp"
                />

            <TextView
                android:id="@+id/textLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="55dp"
                android:layout_toEndOf="@+id/img1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/app_name"
                android:textColor="@color/primary"
                android:textSize="24sp"

                />

        </LinearLayout>

        <ImageView
            android:id="@+id/iconSlider"
            android:layout_width="270dp"
            android:layout_height="309dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/maskot"
            app:layout_constraintTop_toBottomOf="@+id/Layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/maskot1"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/iconSlider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/maskot2"
            android:padding="10dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/text1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/text2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="300dp"
            android:layout_height="57dp"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/poppins_regular"
            android:text="Log In"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text2" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="300dp"
            android:layout_height="57dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/poppins_regular"
            android:text="Register"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text2" />
    </LinearLayout>












</androidx.constraintlayout.widget.ConstraintLayout>